# cd15833-intro-to-Cursor-exercise

./: LICENSE.md  README.md
01-blueprint-data-foundation/solution/: .gitignore  pyproject.toml
01-blueprint-data-foundation/solution/expense_tracker/: __main__.py  models.py  store.py
01-blueprint-data-foundation/starter/.cursor/rules/: python-cli.mdc
01-blueprint-data-foundation/starter/expense_tracker/: models.py  store.py
01-blueprint-data-foundation/starter/tests/: test_models.py  test_store.py
Exercise Creation Resources/: Accessibility Standards.md  Exercise Guidance.md  Real-World Content Guidelines.md  Third Party Images and Datasets.md
module-1-name/exercise-name-starter/: INSTRUCTIONS.md
